Thu Jul  7 22:50:47 WIB 2016
digikam5: Added
  This is digiKam 5.0.0 release
  You will need the whole framework5 packages and libkipi
+--------------------------+
Thu Jul  7 06:32:35 WIB 2016
libkipi: Added
  This is needed to build digikam5's kipi plugin
+--------------------------+
Wed Jul  6 18:09:29 WIB 2016
framework5: Added
  This is a testing playground for Framework 5 to build digiKam 5
+--------------------------+
Wed Jul  6 18:04:37 WIB 2016
BeautifulSoup: Removed (Included in SBo)
OpenAL: Removed (Included in SBo)
ProjectLibre: Removed (Included in SBo)
QtGstreamer: Removed (Included in Slackware 14.2)
TeamSpeak3: Removed (Included in SBo)
aegisub: Removed (Included in SBo)
anjuta: Removed (Included in SBo)
apsw: Removed (Included in SBo)
atkmm: Removed (Included in Slackware 14.2)
autogen: Removed (Included in SBo)
avbin: Removed (Included in SBo)
bullet: Removed (Included in SBo)
cairomm: Removed (Included in Slackware 14.2)
calibre: Removed (Included in SBo)
cgit: Removed (Included in SBo)
cssselect: Removed (Included in SBo)
cssutils: Removed (Included in SBo)
cups: Removed (Included in Slackware 14.2)
cups-filters: Removed (Included in Slackware 14.2)
db53: Removed (Included in SBo)
digikam: Removed (Included in SBo)
dnspython: Removed (Included in SBo)
dropbox: Removed (Included in SBo)
e19: Removed (Included in SBo)
ecdsa: Removed (Included in SBo)
eigen3: Removed (Included in Slackware 14.2)
ettercap: Removed (Included in SBo)
ffms2: Removed (Included in SBo)
filezilla: Removed (Included in SBo)
gdl: Removed (Included in SBo)
glibmm: Removed (Included in Slackware 14.2)
gnugo: Removed (Included in SBo)
gogglesmm: Removed (Included in SBo)
google-earth: Removed (Included in SBo)
gtkmm: Removed (Included in Slackware 14.2)
gtkmm3: Removed (Included in Slackware 14.2)
gtkpod: Removed (Included in SBo)
gtksourceview3: Removed (Included in SBo)
guvcview: Removed (Included in SBo)
hub: Removed (Included in SBo)
insync-kde: Removed (Included in SBo)