@@ -5,6 +5,6 @@ DOWNLOAD="http://download.kde.org/stable/digikam/digikam-5.0.0.tar.bz2"
 MD5SUM="1129b327099f9773854d8408b73d6be3"
 DOWNLOAD_x86_64=""
 MD5SUM_x86_64=""
-REQUIRES="liblqr lensfun ffmpeg libpgf libkface framework5 libkipi"
+REQUIRES="liblqr lensfun ffmpeg libpgf libkface framework5 libkipi5"
 MAINTAINER="Willy Sudiarto Raharjo"
 EMAIL="willysr@slackbuilds.org"
