@@ -1,3 +1,7 @@
+Fri Jul  8 06:23:39 WIB 2016
+digikam5: Update DEP.
+libkipi5: Added (renamed from libkipi)
++--------------------------+
 Thu Jul  7 22:50:47 WIB 2016
 digikam5: Added
   This is digiKam 5.0.0 release
